# obs-websocket

./: CMakeLists.txt
src/: Config.cpp  Config.h  obs-websocket.cpp
src/eventhandler/: EventHandler.cpp  EventHandler.h  EventHandler_Outputs.cpp
src/requesthandler/: RequestHandler_Config.cpp
src/utils/: Platform.cpp  Platform.h
src/websocketserver/: WebSocketServer.cpp  WebSocketServer_Protocol.cpp
